--- a/WebGameV1/Views/Shared/_Layout.cshtml
+++ b/WebGameV1/Views/Shared/_Layout.cshtml
@@ -105,7 +105,7 @@
 	<!-- Footer -->
 	<footer class="border-top footer text-muted mt-4">
 		<div class="container">
-			<!-- Footer content goes here -->
+			<partial name="_Footer" />
 		</div>
 	</footer>
 
