--- a/WebGameV1/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebGameV1/Views/Shared/_LayoutAdmin.cshtml
@@ -36,9 +36,12 @@
 
 <body>
     <div class="container-fluid" >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="row">         
             <!-- Sidebar -->
-            <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+            <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar ">
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
